# glossary

./: Cargo.toml
de/Ausblicke 3/: 1A.yaml  1B.yaml  1C.yaml  2A.yaml  2B.yaml  2C.yaml  3C.yaml  4A.yaml  Intro.yaml
src/: definition.rs  main.rs  term.rs
