[package]
name = "glossary"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
serde = { version = "1.0.130", features = ["derive"] }
serde_yaml = "0.8.21"
structopt = "0.3.23"
walkdir = "2.3.2"

[features]
